prefernces done, new font, layout fixes

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -24,6 +24,8 @@
             android:theme="@style/Base.Theme.MaterialComponents"
             app:backgroundTint="@color/colorPrimary"
             app:fabAlignmentMode="center"
+            app:layout_anchor="@id/tabs"
+            app:layout_anchorGravity="bottom"
             app:navigationIcon="@drawable/ic_menu_black_24dp" />
 
         <TextView
