--- a/app/src/main/res/layout/content_task_view.xml
+++ b/app/src/main/res/layout/content_task_view.xml
@@ -45,7 +45,8 @@
                 android:id="@+id/taskViewRecycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/task_view_header">
+                android:paddingStart="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/task_view_task_name">
 
             </androidx.recyclerview.widget.RecyclerView>
 
@@ -63,7 +64,9 @@
                 android:id="@+id/taskViewTagRecycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:orientation="vertical"
                 app:layout_constraintTop_toBottomOf="@+id/taskViewRecycler"
                 tools:layout_editor_absoluteX="16dp" />
@@ -81,15 +84,4 @@
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/taskViewFAB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:clickable="true"
-        app:fabSize="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/ic_done_all_black_24dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
