--- a/app/src/main/res/layout/fragment_browse.xml
+++ b/app/src/main/res/layout/fragment_browse.xml
@@ -94,7 +94,7 @@
 
             </androidx.cardview.widget.CardView>
 
-            <androidx.recyclerview.widget.RecyclerView
+            <me.saket.inboxrecyclerview.InboxRecyclerView
                 android:id="@+id/browseTaskRecycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -104,5 +104,11 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
+
+    <me.saket.inboxrecyclerview.page.ExpandablePageLayout
+        android:id="@+id/expandable_page_browse"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:elevation="72dp"/>
 
 </FrameLayout>
