--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
+    <group
+        android:checkableBehavior="single"
+        android:orderInCategory="0">
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_home_black_24dp"
@@ -13,10 +16,6 @@
             android:icon="@drawable/ic_archive_black_24dp"
             android:title="Archive" />
         <item
-            android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_settings_black_24dp"
-            android:title="Settings" />
-        <item
             android:id="@+id/nav_import_export"
             android:icon="@drawable/ic_import_export_black_24dp"
             android:title="Import/Export" />
@@ -24,6 +23,16 @@
             android:id="@+id/nav_test"
             android:icon="@drawable/ic_menu_manage"
             android:title="Test" />
+    </group>
+    <group
+        android:id="@+id/nav_drawer_bottom_group"
+        android:checkableBehavior="single"
+        android:orderInCategory="1">
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/ic_settings_black_24dp"
+            android:title="Settings"
+            />
     </group>
 
 
