--- a/app/src/main/res/layout/fragment_archive.xml
+++ b/app/src/main/res/layout/fragment_archive.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_archive_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/fragment_archive_container"
+    android:background="@color/white"
     tools:context=".ArchiveFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/archiveRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="64dp">
+        android:paddingTop="56dp">
 
 
     </androidx.recyclerview.widget.RecyclerView>
