--- a/app/src/main/res/layout/activity_create_tag.xml
+++ b/app/src/main/res/layout/activity_create_tag.xml
@@ -9,14 +9,13 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppThemeLight.NoActionBar">
+        android:theme="@style/AppThemeGlobal">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppThemeLight.NoActionBar" />
+            app:popupTheme="@style/AppThemeGlobal" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
