--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -22,10 +22,10 @@
             android:layout_gravity="bottom"
             android:layout_marginBottom="48dp"
             android:theme="@style/Base.Theme.MaterialComponents"
-            app:backgroundTint="@color/colorPrimary"
             app:fabAlignmentMode="center"
             app:layout_anchor="@id/tabs"
             app:layout_anchorGravity="bottom"
+            android:backgroundTint="@color/cyanea_primary"
             app:navigationIcon="@drawable/ic_menu_black_24dp" />
 
         <TextView
@@ -36,6 +36,7 @@
             android:text="@string/app_name"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:textColor="?menuIconColor"
             app:layout_anchor="@id/toolbar"
             app:layout_anchorGravity="center_vertical" />
 
@@ -44,9 +45,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="@color/colorPrimary"
-            app:tabSelectedTextColor="@color/tabSelectedTextColor"
-            app:tabTextColor="@color/tabUnselectedTextColor">
+            android:background="@color/cyanea_primary"
+            app:tabIndicatorColor="?colorAccent"
+>
 
 
             <com.google.android.material.tabs.TabItem
@@ -73,6 +74,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_add_black_24dp"
             app:fabSize="normal"
+            app:backgroundTint="?colorAccent"
             app:layout_anchor="@id/toolbar" />
 
 
