--- a/app/src/main/res/layout/preference_headers.xml
+++ b/app/src/main/res/layout/preference_headers.xml
@@ -9,9 +9,8 @@
         android:id="@+id/pref_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="@style/AppThemeLight"
+        android:theme="@style/AppThemeGlobal"
         app:layout_constraintTop_toTopOf="parent"
         app:title="Settings" />
 
@@ -80,7 +79,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Theme"
-                    android:textColor="@android:color/black"
                     app:layout_constraintBottom_toBottomOf="@+id/prefThemeIcon"
                     app:layout_constraintLeft_toRightOf="@+id/prefThemeIcon"
                     app:layout_constraintTop_toTopOf="@+id/prefThemeIcon" />
@@ -106,7 +104,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Folders"
-                    android:textColor="@android:color/black"
                     app:layout_constraintBottom_toBottomOf="@+id/prefFolderIcon"
                     app:layout_constraintLeft_toRightOf="@+id/prefFolderIcon"
                     app:layout_constraintTop_toTopOf="@+id/prefFolderIcon" />
