--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#f5f5f5</color>
+<!--    <color name="colorPrimary">#</color>
     <color name="colorPrimaryDark">#e0e0e0</color>
-    <color name="colorAccent">#00897b</color>
+    <color name="colorAccent">#00897b</color>-->
+
+    <!-- Accent colors -->
+    <color name="cyanea_accent_reference">#00897b</color>
+    <!-- Primary colors -->
+    <color name="cyanea_primary_reference">#f5f5f5</color>
+    <!-- Background colors -->
+    <color name="cyanea_background_light">#EBE5D9</color>
+    <color name="cyanea_background_light_darker">#D4D4D4</color>
+    <color name="cyanea_background_light_lighter">#EEE8DE</color>
+
     <color name="tabSelectedTextColor">#000000</color>
     <color name="tabUnselectedTextColor">#99000000</color>
     <color name="statusBarTransparent">#00FFFFFF</color>
@@ -14,5 +24,7 @@
     <color name="iconColor">#88000000</color>
 
     <color name="launch">#888888</color>
+    <color name="windowBackgroundLight">#f5f5f5</color>
+    <color name="windowBackgroundDark">@color/slate_black</color>
 
 </resources>
