--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,115 +2,20 @@
 
     <!-- Base application theme. -->
 
-    <style name="AppThemeGlobal" parent="Theme.Cyanea.Light">
+    <style name="AppThemeGlobal" parent="Theme.Cyanea.Light.NoActionBar">
         <item name="android:fontFamily">@font/worksans_regular</item>
         <item name="textAppearanceButton">@font/worksans_semibold</item>
     </style>
 
 
 
-    <style name="AppThemeLight.Launcher">
-        <item name="android:windowBackground">@color/launch</item>
-        <item name="android:statusBarColor">@color/statusBarTransparent</item>
-        <item name="android:windowLightStatusBar" tools:targetApi="23">true</item>
 
 
-    </style>
 
-    <style name="AppThemeLight" parent="AppThemeGlobal">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="windowActionModeOverlay">true</item>
-        <item name="android:textColorPrimary">@color/slate_black</item>
-        <item name="android:windowBackground">@color/white</item>
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-
-        <item name="bottomBarIconColor">@color/slate_black</item>
-
-    </style>
-
-    <style name="AppThemeLightCollapse" parent="Theme.AppCompat.Light">
-        <!-- Customize your theme here. -->
-        <!--<item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>-->
-        <item name="windowActionModeOverlay">true</item>
-        <item name="android:textColorPrimary">@color/slate_black</item>
+    <style name="AppThemeLightCollapse" parent="AppThemeGlobal">
         <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="windowNoTitle">true</item>
-        <item name="windowActionBar">false</item>
-        <item name="android:windowIsTranslucent">true</item>
-        <item name="android:colorBackgroundCacheHint">@android:color/transparent</item>
-
-        <item name="bottomBarIconColor">@color/slate_black</item>
-
-    </style>
-    <!-- Dark application theme. -->
-    <!--<style name="AppThemeDark" parent="Theme.AppCompat">
-        <!- Customize your theme here. ->
-        <item name="colorPrimary">@color/colorDarkPrimary</item>
-        <item name="colorPrimaryDark">@color/colorDarkPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="windowActionModeOverlay">true</item>
-        <item name="android:textColorPrimary">@color/white</item>
-        <item name="android:windowBackground">@color/slate_black</item>
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>-->
-
-    <style name="AppThemeLight.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
     </style>
 
-    <!--<style name="AppThemeDark.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>-->
-
-
-    <style name="AppThemeLightMain" parent="AppThemeGlobal">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="windowActionModeOverlay">true</item>
-        <item name="android:textColorPrimary">@color/slate_black</item>
-        <item name="android:windowBackground">@color/white</item>
-        <item name="windowActionBar">false</item>
-        <item name="android:statusBarColor">@color/statusBarTransparent</item>
-        <item name="windowNoTitle">true</item>
-        <item name="android:popupBackground">@color/cardview_light_background</item>
-
-
-    </style>
-
-    <!--<style name="AppThemeDarkMain" parent="Theme.AppCompat">
-        <!- Customize your theme here. ->
-        <item name="colorPrimary">@color/colorDarkPrimary</item>
-        <item name="colorPrimaryDark">@color/colorDarkPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="windowActionModeOverlay">true</item>
-        <item name="android:textColorPrimary">@color/white</item>
-        <item name="android:windowBackground">@color/slate_black</item>
-        <item name="windowActionBar">false</item>
-        <item name="android:statusBarColor">@color/statusBarTransparent</item>
-        <item name="windowNoTitle">true</item>
-        <item name="android:popupBackground">@color/cardview_dark_background</item>
-    </style>-->
-
-
-    <!-- ToolBar -->
-    <style name="ToolBarStyle" parent="AppThemeLight">
-        <item name="android:textColorPrimary">@android:color/black</item>
-        <item name="android:textColorSecondary">@android:color/black</item>
-        <item name="android:statusBarColor">@color/statusBarTransparent</item>
-        <item name="actionBarTheme">@style/Theme.AppCompat.Light.DarkActionBar</item>
-
-
-    </style>
 
     <style name="Theme.AppCompat.Transparent.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Transparent the theme here -->
