--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="Icon">
-        <attr name="cyaneaBackground" format="integer">
+        <attr name="cyaneaIconBackground" format="integer">
+            <enum name="background" value="0"/>
+            <enum name="primary" value="1"/>
+            <enum name="accent" value="2"/>
+        </attr>
+    </declare-styleable>
+    <declare-styleable name="CyaneaTextView">
+        <attr name="cyaneaTextBackground" format="integer">
             <enum name="background" value="0"/>
             <enum name="primary" value="1"/>
             <enum name="accent" value="2"/>
