--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -2,8 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".MainActivity">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -28,17 +30,19 @@
             android:backgroundTint="@color/cyanea_primary"
             app:navigationIcon="@drawable/ic_menu_black_24dp" />
 
-        <TextView
+        <com.andb.apps.todo.views.CyaneaTextView
             android:id="@+id/toolbar_text"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="56dp"
+            android:alpha="54"
             android:text="@string/app_name"
+            android:textColor="?menuIconColor"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="?menuIconColor"
             app:layout_anchor="@id/toolbar"
-            app:layout_anchorGravity="center_vertical" />
+            app:layout_anchorGravity="center_vertical"
+            custom:cyaneaTextBackground="primary" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
