--- a/app/src/main/res/layout/inbox_divider.xml
+++ b/app/src/main/res/layout/inbox_divider.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
+    <com.andb.apps.todo.views.CyaneaTextView
         android:id="@+id/dividerName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
