--- a/app/src/main/res/layout/inbox_list_item.xml
+++ b/app/src/main/res/layout/inbox_list_item.xml
@@ -2,9 +2,11 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:id="@+id/inboxCard"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:theme="@style/AppThemeGlobal">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,7 +21,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
+            <com.andb.apps.todo.views.Icon
                 android:id="@+id/sublistIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -27,9 +29,11 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:layout_weight="0"
-                app:srcCompat="@drawable/list_dropdown_selector" />
+                app:srcCompat="@drawable/list_dropdown_selector"
+                app:cyaneaIconBackground="background"
+                android:alpha="0.54"/>
 
-            <TextView
+            <com.andb.apps.todo.views.CyaneaTextView
                 android:id="@+id/taskName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -40,7 +44,8 @@
                 android:layout_weight="0"
                 android:text="Task Name"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                app:cyaneaTextBackground="background"/>
 
             <View
                 android:layout_width="0dp"
