--- a/app/src/main/res/layout/browse_tag_list_item.xml
+++ b/app/src/main/res/layout/browse_tag_list_item.xml
@@ -9,7 +9,7 @@
     android:focusable="true">
 
 
-    <TextView
+    <com.andb.apps.todo.views.CyaneaTextView
         android:id="@+id/browseTagName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,7 +17,8 @@
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/browseRemoveImage"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:cyaneaTextBackground="background"/>
 
     <ImageView
         android:id="@+id/browseTagImage"
