--- a/app/src/main/res/layout/inbox_checklist_list_item.xml
+++ b/app/src/main/res/layout/inbox_checklist_list_item.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.appcompat.widget.AppCompatCheckBox xmlns:android="http://schemas.android.com/apk/res/android"
+<CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/listTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingTop="12dp"
-    android:paddingBottom="12dp"
-    android:text="CheckBox"
-    app:layout_constraintStart_toStartOf="parent"
+
     tools:layout_editor_absoluteY="0dp" />
