--- a/app/src/main/res/layout/task_view_tag_list_item.xml
+++ b/app/src/main/res/layout/task_view_tag_list_item.xml
@@ -18,12 +18,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_label_black_24dp" />
 
-    <TextView
+    <com.andb.apps.todo.views.CyaneaTextView
         android:id="@+id/task_view_item_tag_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tag Name"
         app:layout_constraintBottom_toBottomOf="@+id/tagImage"
         app:layout_constraintLeft_toRightOf="@+id/tagImage"
-        app:layout_constraintTop_toTopOf="@+id/tagImage" />
+        app:layout_constraintTop_toTopOf="@+id/tagImage"
+        app:cyaneaTextBackground="background"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
