--- a/app/src/main/res/layout/fragment_browse.xml
+++ b/app/src/main/res/layout/fragment_browse.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".BrowseFragment">
@@ -47,16 +48,17 @@
                         android:layout_height="wrap_content"
                         android:background="?android:attr/selectableItemBackground">
 
-                        <TextView
-                            android:id="@+id/browseHeaderText"
+                        <com.andb.apps.todo.views.Icon
+                            android:id="@+id/browseHeaderIcon"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="16dp"
-                            android:text="@string/browse_tag_card_header_text"
+                            android:src="@drawable/ic_folder_black_24dp"
                             app:layout_constraintBottom_toBottomOf="parent"
+                            android:alpha=".54"
                             app:layout_constraintTop_toTopOf="parent" />
 
-                        <ImageView
+                        <com.andb.apps.todo.views.Icon
                             android:id="@+id/tagCollapseButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -68,7 +70,7 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
-                        <ImageView
+                        <com.andb.apps.todo.views.Icon
                             android:id="@+id/tagAddButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -109,6 +111,6 @@
         android:id="@+id/expandable_page_browse"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:elevation="72dp"/>
+        android:elevation="72dp" />
 
 </FrameLayout>
