--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,19 +1,18 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <!-- Base application theme. -->
 
     <style name="AppThemeGlobal" parent="Theme.Cyanea.Light.NoActionBar">
         <item name="android:fontFamily">@font/worksans_regular</item>
         <item name="textAppearanceButton">@font/worksans_semibold</item>
+        <item name="android:statusBarColor">@color/statusBarTransparent</item>
     </style>
-
-
-
-
 
 
     <style name="AppThemeLightCollapse" parent="AppThemeGlobal">
         <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
     </style>
 
 
